[tool.poetry]
name = "aloha"
version = "0.1.0"
description = ""
authors = ["Davide Magrin <magrin.davide@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.8,<3.11"
sem = {url = "https://github.com/signetlabdei/sem/archive/develop.zip"}
jupyter = "^1.0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
